--- a/react-portfolio/src/App.css
+++ b/react-portfolio/src/App.css
@@ -166,7 +166,7 @@ span.navbar-text {
 .social-icon a {
   width: 42px;
   height: 42px;
-  background: rgba(217, 217, 217, 0.1);
+  background: rgba(217, 217, 217, 0.445);
   display: inline-flex;
   border-radius: 50%;
   margin-right: 6px;
@@ -623,6 +623,23 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 }
 .contact form button:hover::before {
   width: 100%;
+}
+
+/* Footer */
+.footer {
+  padding: 50px 0 0;
+  background: #121212;
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.footer p {
+  font-weight: 400;
+  font-size: 14px;
+  color: #e7e7e7;
+  letter-spacing: 0.5px;
+  margin-top: 20px;
 }
 
 .App {
