--- a/react-portfolio/src/App.css
+++ b/react-portfolio/src/App.css
@@ -141,7 +141,7 @@ nav.navbar.scrolled {
   background-color: #12121250;
 }
 nav.navbar a.navbar-brand {
-  width: 9%;
+  width: 5%;
 }
 nav.navbar .navbar-nav .nav-link.navbar-link {
   font-weight: 400;
@@ -159,6 +159,11 @@ span.navbar-text {
   display: flex;
   align-items: center;
 }
+
+/* #basic-navbar-nav{
+
+} */
+
 .social-icon {
   display: inline-block;
   margin-left: 14px;
@@ -554,7 +559,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   padding: 60px 0 200px 0;
 }
 .contact img {
-  width: 12%;
+  width: 62%;
 }
 .contact h2 {
   font-size: 45px;
