--- a/react-portfolio/src/App.css
+++ b/react-portfolio/src/App.css
@@ -128,6 +128,10 @@ p.danger {
 
 /* Navbar Css */
 
+#basic-navbar-nav > span > button > a {
+  text-decoration: none;
+  font-weight: 700;
+}
 nav.navbar {
   padding: 18px 0;
   position: fixed;
@@ -406,6 +410,10 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 }
 
 /* Projects */
+.project-link {
+  display: flex;
+  padding: 40px;
+}
 
 .project {
   padding: 80px 0;
@@ -491,18 +499,12 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   border-radius: 30px;
   overflow: hidden;
   margin-bottom: 24px;
+  cursor: pointer;
 }
 .proj-imgbx::before {
   content: "";
-  background: rgb(2, 0, 36);
-  background: rgb(111, 215, 105);
-  background: rgb(102, 184, 97);
-  background: linear-gradient(
-    90deg,
-    rgba(102, 184, 97, 1) 42%,
-    rgba(59, 160, 181, 1) 100%
-  );
-  opacity: 0.85;
+  background: #000;
+  opacity: 0.5;
   position: absolute;
   width: 100%;
   height: 0;
@@ -530,6 +532,15 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   font-weight: 700;
   letter-spacing: 0.8px;
   line-height: 1.1em;
+}
+
+.proj-txtx .deplinks {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  margin-top: 20px;
+  margin-left: 25px;
 }
 .proj-txtx span {
   font-style: italic;
@@ -625,6 +636,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   left: 0;
   z-index: 0;
   transition: 0.3s ease-in-out;
+  border-radius: 10px;
 }
 .contact form button:hover::before {
   width: 100%;
