--- a/react-portfolio/src/App.css
+++ b/react-portfolio/src/App.css
@@ -500,6 +500,14 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   overflow: hidden;
   margin-bottom: 24px;
   cursor: pointer;
+  width: 400px; /* Set your preferred width */
+  height: 250px; /* Set your preferred height */
+}
+
+.proj-imgbx img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 .proj-imgbx::before {
   content: "";
