updated banner introduction and styled it

--- a/react-portfolio/src/App.css
+++ b/react-portfolio/src/App.css
@@ -129,9 +129,20 @@ p.danger {
 /* Navbar Css */
 
 #basic-navbar-nav > span > button > a {
+  color: rgb(255, 254, 254);
   text-decoration: none;
   font-weight: 700;
 }
+#basic-navbar-nav > span > button > a:hover {
+  color: rgb(0, 0, 0);
+  text-decoration: none;
+  font-weight: 700;
+}
+
+#basic-navbar-nav > span > button:hover {
+  color: black !important;
+}
+
 nav.navbar {
   padding: 18px 0;
   position: fixed;
@@ -157,6 +168,7 @@ nav.navbar .navbar-nav .nav-link.navbar-link {
 }
 nav.navbar .navbar-nav a.nav-link.navbar-link:hover,
 nav.navbar .navbar-nav a.nav-link.navbar-link.active {
+  color: rgb(0, 0, 0);
   opacity: 1;
 }
 span.navbar-text {
@@ -293,7 +305,14 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 .banner {
   margin-top: 0;
   padding: 260px 0 100px 0;
-  background-image: url("./assets/img/Space.jpg");
+  background-image: linear-gradient(
+    to left bottom,
+    #051937,
+    #393e58,
+    #67687b,
+    #96959f,
+    #c6c6c6
+  );
   background-position: top center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -326,7 +345,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   display: block;
 }
 .banner p {
-  color: #b8b8b8;
+  color: #fdfdfd;
   font-size: 18px;
   letter-spacing: 0.8px;
   line-height: 1.5em;
@@ -354,6 +373,11 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 .banner img {
   animation: updown 3s linear infinite;
 }
+
+#home > div > div > div.col-xl-7.col-md-6.col-12 > a {
+  text-decoration: none !important;
+}
+
 @keyframes updown {
   0% {
     transform: translateY(-20px);
@@ -375,7 +399,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   position: relative;
 }
 .skill-bx {
-  background: #151515;
+  background: rgb(233, 233, 233);
   border-radius: 64px;
   text-align: center;
   padding: 60px 50px;
@@ -384,13 +408,19 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 .skill h2 {
   font-size: 45px;
   font-weight: 700;
+  color: #0a0a0acb;
+}
+
+.skill h5 {
+  color: black;
 }
 .skill p {
-  color: #b8b8b8;
+  color: #0a0a0a;
   font-size: 18px;
   letter-spacing: 0.8px;
   line-height: 1.5em;
   margin: 14px 0 75px 0;
+  font-weight: 525;
 }
 .skill-slider {
   width: 80%;
@@ -418,15 +448,23 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 .project {
   padding: 80px 0;
   position: relative;
-  background-color: black;
+  background-image: linear-gradient(
+    to left bottom,
+    #051937,
+    #393e58,
+    #67687b,
+    #96959f,
+    #c6c6c6
+  );
 }
 .project h2 {
   font-size: 45px;
   font-weight: 700;
   text-align: center;
+  color: #ffffff;
 }
 .project p {
-  color: #b8b8b8;
+  color: #f3f3f3;
   font-size: 18px;
   letter-spacing: 0.8px;
   line-height: 1.5em;
@@ -568,12 +606,13 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 /* Contact */
 
 .contact {
-  background: rgb(111, 215, 105);
-  background: rgb(102, 184, 97);
-  background: linear-gradient(
-    90deg,
-    rgba(102, 184, 97, 1) 42%,
-    rgba(59, 160, 181, 1) 100%
+  background-image: linear-gradient(
+    to top,
+    #606060,
+    #484848,
+    #313131,
+    #1c1c1c,
+    #000000
   );
   padding: 60px 0 200px 0;
 }
