--- a/react-portfolio/src/App.css
+++ b/react-portfolio/src/App.css
@@ -318,6 +318,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   background-repeat: no-repeat;
   text-align: left;
 }
+
 .banner .tagline {
   font-weight: 700;
   letter-spacing: 0.8px;
@@ -637,8 +638,12 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   padding: 60px 0 100px 0;
 }
 .contact img {
-  width: 62%;
+  width: 92%;
+  margin-bottom: 100px;
+  margin-right: 50px;
+  animation: updown 3s ease-in-out infinite;
 }
+
 .contact h2 {
   font-size: 45px;
   font-weight: 700;
