--- a/react-portfolio/src/App.css
+++ b/react-portfolio/src/App.css
@@ -405,6 +405,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   text-align: center;
   padding: 60px 50px;
   margin-top: -60px;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 .skill h2 {
   font-size: 45px;
@@ -470,7 +471,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   padding: 80px 0;
   position: relative;
   background-image: linear-gradient(
-    to left bottom,
+    to top,
     #051937,
     #393e58,
     #67687b,
@@ -628,12 +629,12 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 
 .contact {
   background-image: linear-gradient(
-    to top,
-    #606060,
-    #484848,
-    #313131,
-    #1c1c1c,
-    #000000
+    to bottom,
+    #051937,
+    #393e58,
+    #67687b,
+    #96959f,
+    #c6c6c6
   );
   padding: 60px 0 100px 0;
 }
